@startuml
'https://plantuml.com/sequence-diagram
class Human{
    Mood mood;
    PersonalDocument
    int degreeOfAgreement
    say()
    shareMood()
    changeMood()
}
class PersonalDocument{
    int series;
    int number;
    LocalDate dateOfBorn;
    String name;
}
class Passport{
    String militaryDuty;
}
class BirthCertificate{
    Country placeOfBirth;
}
abstract class Creature{
    Stirng name
    Location previousLocation
    Location location
    ArrayList<Property> properties
    Gender gender
}
class HumanWithPropeller{
    int amountOfJam;
}
enum Country
enum Gender
enum Location
enum Mood
enum Property

class Exception
class NoPersonalDocumentException
class NegativeAmountOfJam

Interface Locationable{
    void changeLocation
    void comeBack
}
Interface Propertyable{
    cleanProperties()
    updateProperties()
    removeProperties()
    addProperties()
}
Interface Flyable{
    flyTo()
}

Gender *-- Creature
Location *-- Creature
Mood *--- Human
Country *--- Human
Property *-- Creature

Human *-- PersonalDocument

Locationable <|.. Creature
Propertyable <|.. Creature
Flyable <|.... HumanWithPropeller
Telegramable <|.. Telegram

PersonalDocument <|-- Passport
PersonalDocument <|-- BirthCertificate
Creature <|-- Human
Human <|-- HumanWithPropeller
Exception <|-- NoPersonalDocumentException
Exception <|-- NegativeAmountOfJam
class Life
class Telegram
Interface Telegramable

Human o-- Telegramable
@enduml